syntax = "proto3";

package eth.transaction.v1;

import "google/protobuf/timestamp.proto";

message ChronicleTransactions {
  repeated ChronicleTransaction transactions = 1;
}

message ChronicleTransaction {
  string from = 1;
  string to = 2;
  string hash = 3;
  string chain = 4;
  string status = 5;
  google.protobuf.Timestamp timestamp = 6;
}